--- a/src/content/blog/vihy/index.mdx
+++ b/src/content/blog/vihy/index.mdx
@@ -5,20 +5,35 @@ date: 2025-08-10
 tags: ['Astro','Vercel']
 ---
 
-## Test CPP
+# Heading 1
+## Heading 2
+Ini adalah paragraf
 
+### Heading 3
+#### Heading 4
+##### Heading 5
+###### Heading 6
+
+---
+## Test Code Block
+### Code Block
 ```cpp
 int main(){
   fmt::println("Hello World\n");
 }
 ```
+### Inline Code Block
+Go to this path `src/bin/gcc`
 
-```cmake
-set(fmt_dir "ibra/iha/asd/")
-```
+---
+## Test Latex
+$$
+a = \frac{b}{c}
+$$
 
+Inline Latex
+$a=\frac{b}{c}$
 
-## Hello World
 
 
 
