--- a/src/content/blog/250913-easy-idf-setup/index.mdx
+++ b/src/content/blog/250913-easy-idf-setup/index.mdx
@@ -30,7 +30,7 @@ Make sure you have to run ESP-IDF on your terminal. Then follow these steps.
     idf.py -p <PORT> flash monitor
     ```
     >
-    > Replace <PORT> with your ESP32's actual serial port (e.g., `COM3` on Windows or `/dev/ttyUSB0` on Linux). We can find this in device manager.
+    > Replace **PORT** with your ESP32's actual serial port (e.g., `COM3` on Windows or `/dev/ttyUSB0` on Linux). We can find this in device manager.
 3. Now your LED should blinking.
 
 ---
@@ -60,7 +60,7 @@ If you are using a chip other than the standard ESP32, you will need to perform 
     idf.py build
     idf.py -p <PORT> flash monitor
     ```
-    > Replace <PORT> with your ESP32's actual serial port (e.g., `COM3` on Windows or `/dev/ttyUSB0` on Linux). We can find this in device manager.
+    > Replace **PORT** with your ESP32's actual serial port (e.g., `COM3` on Windows or `/dev/ttyUSB0` on Linux). We can find this in device manager.
 
 ---
 ## Choosing Programming Style
