--- a/src/content/blog/250913-easy-idf-setup/index.mdx
+++ b/src/content/blog/250913-easy-idf-setup/index.mdx
@@ -20,15 +20,19 @@ Make sure you have to run ESP-IDF on your terminal. Then follow these steps.
 1. **Clone and navigate** to the example folder.
     ```bash
     git clone https://github.com/bokumentation/ESP32-Arduino-as-Components-Starter.git
-    cd ESP32-Arduino-as-Components-Starter/examples/arduino_style
+    ```
+    ```bash
+    cd ESP32-Arduino-as-Components-Starter/examples/esp32_arduino
     ```
 2. **Build, flash, then monitor.**
     ```bash
     idf.py build
+    ```
+    ```bash
     idf.py -p <PORT> flash monitor
     ```
     >
-    > Replace **PORT** with your ESP32's actual serial port (e.g., `COM3` on Windows or `/dev/ttyUSB0` on Linux). We can find this in device manager.
+    > Replace `<PORT>` with your ESP32's actual serial port (e.g., `COM3` on Windows or `/dev/ttyUSB0` on Linux). We can find this in device manager.
 3. Now your LED should blinking.
 
 ---
@@ -56,9 +60,11 @@ If you are using a chip other than the standard ESP32, you will need to perform 
 4. **Build and Flash:** Now we can build and flash the project to your new target chip.
     ```bash
     idf.py build
+    ```
+    ```bash
     idf.py -p <PORT> flash monitor
     ```
-    > Replace **PORT** with your ESP32's actual serial port (e.g., `COM3` on Windows or `/dev/ttyUSB0` on Linux). We can find this in device manager.
+    > Replace `<PORT>` with your ESP32's actual serial port (e.g., `COM3` on Windows or `/dev/ttyUSB0` on Linux). We can find this in device manager.
 
 ---
 ## Choosing Programming Style
@@ -112,9 +118,3 @@ extern "C" void app_main()
     // WARNING: If the program reaches the end of app_main(), the MCU will restart.
 }
 ```
-
-
-
-
-
-
