--- a/src/content/blog/250913-easy-idf-setup/index.mdx
+++ b/src/content/blog/250913-easy-idf-setup/index.mdx
@@ -5,7 +5,7 @@ date: 2025-09-13
 tags: ['Embedded','ESP32']
 ---
 
-This is a straighforward setup for integrating **Arduino-esp32** as an ESP-IDF components. An **internet connection** is required for automatic download of managed components. For other ESP32 chip types, refer to the **"Setting Up for Different ESP32 Chips"** section below.
+This is a straighforward setup for integrating **Arduino-esp32** as an ESP-IDF components. For other ESP32 chip types, refer to the **"Setting Up for Different ESP32 Chips"** section below.
 
 **Features:**
 - Straightforward setup for ESP32 (just clone then build and flash)
@@ -13,6 +13,7 @@ This is a straighforward setup for integrating **Arduino-esp32** as an ESP-IDF c
 
 **You need:**
 - Installed ESP-IDF on your computer
+- an internet connection
 
 ---
 ## Get Started
